--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">MaterialDesign</string>
     <string name="navigation_drawer_open">open</string>
     <string name="navigation_drawer_close">close</string>
+    <string name="title">Olá Mundo!</string>
+    <string name="subtitle">CollapsingToolbarLayout</string>
 </resources>
