--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     </string-array>
 
     <string name="image_transition">Image transition</string>
+    <string name="transition_photo">transition_photo</string>
 
 </resources>
