--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,12 +11,12 @@
 
 
     <string-array name="images">
-        <item>http://gilbertsollars.com/images/wallpapers/best-nature-background/best-nature-background-10.jpg</item>
-        <item>http://hdwallpapers.org.in/uploads/beautiful_nature_background__hd_wallpaper_160312053120.jpg</item>
-        <item>http://www.spyderonlines.com/images/wallpapers/amazing-nature-backgrounds/amazing-nature-backgrounds-19.jpg</item>
         <item>http://chainimage.com/images/nature-photography-backgrounds-wallpaper-658942.jpg</item>
         <item>http://www.twitrcovers.com/wp-content/uploads/2013/09/Water-Mountains-Nature-l.jpg</item>
-        <item>http://kurld.com/images/wallpapers/cute-dog-wallpaper/cute-dog-wallpaper-15.jpg</item>
+        <item>http://hdimagesnew.com/wp-content/uploads/2015/11/nature-desktop-wallpaper-fall.jpg</item>
+        <item>http://hdimagesnew.com/wp-content/uploads/2015/11/nature-wallpaper-for-mac.jpg</item>
+        <item>http://hdimagesnew.com/wp-content/uploads/2015/11/1447436769_Nature-New-Wallpapers-1024x640.jpg</item>
+        <item>http://hdimagesnew.com/wp-content/uploads/2015/11/Nature-New-Wallpapers-3.jpg</item>
     </string-array>
 
     <string name="image_transition">Image transition</string>
